fixing spacing problems on GLO and FNs and punctuation

--- a/css/sab-stylesheet.css
+++ b/css/sab-stylesheet.css
@@ -14,9 +14,15 @@
     src: url('../fonts/MaterialIcons-Regular.ttf');
     font-style: normal;
 }*/
+html, body {
+font-family: "Gentium Basic";
+font-size: 16px;
+line-height: 24px;
+
+}
 
 body {
-    font-family: font1;
+    font-family: "Gentium Basic"; /*font1;*/
     direction: LTR;
     font-size: 17px;
     font-weight: normal;
@@ -737,7 +743,8 @@ span.footnote {
 }
 
 span.fnspan {
-	margin-left: -0.2em	
+	margin-left: -0.2em;
+	display: inline-block;	
 }
 
 span.glospan {
